# airplay_ros2

./: CreateNetwork.m  README.md  SampleSimTimer.m  SampleTimer.m  ShutDownNetwork.m
custom/matlab_msg_gen/win64/install/: local_setup.ps1  setup.ps1
custom/matlab_msg_gen/win64/install/include/ap_interfaces/msg/: pos.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
custom/matlab_msg_gen/win64/install/include/ap_interfaces/msg/detail/: pos__functions.c  pos__struct.hpp
custom/matlab_msg_gen/win64/install/lib/: ap_interfaces__rosidl_generator_c.lib  ap_interfaces__rosidl_typesupport_cpp.lib
custom/matlab_msg_gen/win64/install/share/ap_interfaces/: package.bat  package.dsv  package.ps1  package.xml
custom/matlab_msg_gen/win64/install/share/ap_interfaces/cmake/: ap_interfaces__rosidl_generator_cExport-release.cmake  ap_interfaces__rosidl_generator_cExport.cmake  ap_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
custom/matlab_msg_gen/win64/src/ap_interfaces/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
custom/matlab_msg_gen/win64/src/ap_interfaces/include/ap_interfaces/: visibility_control.h
custom/matlab_msg_gen/win64/src/ap_interfaces/m/+ros/+internal/+ros2/+custommessages/+ap_interfaces/: ap_interfaces_msg_Pos_1To2_Converter.m  ap_interfaces_msg_Pos_2To1_Converter.m  pos.m
custom/matlab_msg_gen/win64/src/ap_interfaces/src/: ap_interfaces_Pos_message.cpp
simulink/: draft.slx  draft.slxc
simulink/+bus_conv_fcns/+ros2/+busToMsg/: RefCachedMap.mat
simulink/+bus_conv_fcns/+ros2/+busToMsg/+ap_interfaces/: Pos.m
simulink/+bus_conv_fcns/+ros2/+busToMsg/+example_interfaces/: Int32MultiArray.m  Int8.m  MultiArrayLayout.m
simulink/+bus_conv_fcns/+ros2/+msgToBus/: RefCachedMap.mat
simulink/+bus_conv_fcns/+ros2/+msgToBus/+ap_interfaces/: Pos.m
simulink/+bus_conv_fcns/+ros2/+msgToBus/+example_interfaces/: Int32MultiArray.m  Int8.m  MultiArrayDimension.m  MultiArrayLayout.m
simulink/install/: local_setup.bat  setup.bat
simulink/install/include/ap_interfaces/msg/detail/: pos__rosidl_typesupport_fastrtps_c.h  pos__rosidl_typesupport_fastrtps_cpp.hpp
simulink/install/lib/: ap_interfaces__python.lib  ap_interfaces__rosidl_typesupport_fastrtps_c.lib
simulink/install/share/ament_index/resource_index/parent_prefix_path/: draft
simulink/install/share/ap_interfaces/cmake/: ap_interfaces__rosidl_generator_cppExport.cmake  ap_interfaces__rosidl_typesupport_cExport.cmake
simulink/install/share/draft/: local_setup.dsv  package.bat  package.dsv  package.ps1
simulink/slprj/ert/_sharedutils/: shared_file.dmr
simulink/slprj/ert/draft/tmwinternal/: BlockTraceInfo.mat  CompileInfo.xml  binfo.mat  minfo.mat
simulink/slprj/sim/varcache/draft/: checksumOfCache.mat  varInfo.mat
simulink/slprj/sim/varcache/draft/tmwinternal/: simulink_cache.xml
simulink/src/ap_interfaces/: CMakeLists.txt  package.xml  packageInfo.mat
simulink/src/ap_interfaces/include/ap_interfaces/: visibility_control.h
simulink/src/draft/: CMakeLists.txt  packageInfo.mat
simulink/src/draft/include/draft/: draft.h  draft_private.h  draft_pubsub_common.h  draft_types.h  multiword_types.h  ros2nodeinterface.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.h  visibility_control.h
simulink/src/draft/src/: draft.cpp  draft_data.cpp  main.cpp  ros2nodeinterface.cpp  slros_busmsg_conversion.cpp
